# linaix-os

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
.github/workflows/: build.yml
assets/limine/: limine  limine.conf
cmake/: utils.cmake
kernel/: CMakeLists.txt
kernel/arch/x86/: entry.cpp  linker.lds
kernel/includes/init/: main.hpp
kernel/includes/limine/: limine.hpp
